alerts when hovering over top titles imdb score, XHR works now

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -10,5 +10,9 @@
       ],
       "js":["ext.js"]
     }
+  ],
+  "permissions": [
+    "https://www.netflix.com/*",
+    "https://lit-headland-12280.herokuapp.com/title/*"
   ]
 }
